--- a/UmbBase.Web/App_Data/umbraco.config
+++ b/UmbBase.Web/App_Data/umbraco.config
@@ -67,10 +67,10 @@
 <root id="-1">
   <site id="1062" key="8cd49f83-0075-4714-bb9d-8417ed6cf04a" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2016-08-15T16:44:53" updateDate="2017-06-10T19:10:28" nodeName="Site" urlName="site" path="-1,1062" isDoc="" nodeType="1059" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="0" nodeTypeAlias="site">
     <umbracoRedirect>2092</umbracoRedirect>
-    <clientHome id="2092" key="7c33f824-8a09-4f46-9cec-953dd2eeef19" parentID="1062" level="2" creatorID="0" sortOrder="0" createDate="2016-08-21T22:49:06" updateDate="2017-06-12T14:18:29" nodeName="tr" urlName="tr" path="-1,1062,2092" isDoc="" nodeType="2086" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="3100" nodeTypeAlias="clientHome">
+    <clientHome id="2092" key="7c33f824-8a09-4f46-9cec-953dd2eeef19" parentID="1062" level="2" creatorID="0" sortOrder="0" createDate="2016-08-21T22:49:06" updateDate="2017-06-13T00:53:04" nodeName="tr" urlName="tr" path="-1,1062,2092" isDoc="" nodeType="2086" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="3100" nodeTypeAlias="clientHome">
       <metaDescription><![CDATA[Vercon]]></metaDescription>
       <browserTitle><![CDATA[Ana Sayfa]]></browserTitle>
-      <contactEmail><![CDATA[buralarmail@vercon.com]]></contactEmail>
+      <contactEmail><![CDATA[mertkose92@gmail.com]]></contactEmail>
       <addressLine2><![CDATA[Bayraklı]]></addressLine2>
       <addressCity><![CDATA[İzmir]]></addressCity>
       <contactGoogleMaps><![CDATA[38.449819, 27.184833]]></contactGoogleMaps>
@@ -205,7 +205,7 @@
         <pageTitle><![CDATA[Projeler]]></pageTitle>
         <pagePublishDate>2017-03-02T00:00:00</pagePublishDate>
         <pageImage>8285</pageImage>
-        <project id="8375" key="d7b685bd-cb9e-47d1-898f-97ba8d015ee7" parentID="8350" level="4" creatorID="0" sortOrder="0" createDate="2017-03-23T14:08:19" updateDate="2017-06-10T18:26:40" nodeName="Proje 1" urlName="proje-1" path="-1,1062,2092,8350,8375" isDoc="" nodeType="8224" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="8223" nodeTypeAlias="project">
+        <project id="8375" key="d7b685bd-cb9e-47d1-898f-97ba8d015ee7" parentID="8350" level="4" creatorID="0" sortOrder="0" createDate="2017-03-23T14:08:19" updateDate="2017-06-13T15:57:30" nodeName="Proje 1" urlName="proje-1" path="-1,1062,2092,8350,8375" isDoc="" nodeType="8224" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="8223" nodeTypeAlias="project">
           <pageTitle><![CDATA[Proje 1 Sayfa Başlığı]]></pageTitle>
           <pagePublishDate>2017-03-05T00:00:00</pagePublishDate>
           <contentText><![CDATA[<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean metus elit, porta quis mi vel, semper gravida risus. Quisque tristique massa ac felis consectetur tincidunt. Nunc eget sem eu dui consectetur venenatis. Vivamus mollis, justo vitae aliquam imperdiet, metus ex bibendum nibh, ac gravida ex nisi quis erat. Praesent ac gravida dui. Sed ut ex commodo, rutrum felis eget, pretium urna. Phasellus laoreet ex mauris, ac molestie nulla congue et. Ut volutpat mauris augue, at malesuada mauris viverra in.</p>]]></contentText>
