--- a/UmbBase.Web/Web.config
+++ b/UmbBase.Web/Web.config
@@ -58,7 +58,7 @@
     <add key="reCaptchaPublicKey" value="6LdOVhsUAAAAAPfVvWAKXdC07eF3u4GuywB7eYW-" />
     <add key="reCaptchaPrivateKey" value="6LdOVhsUAAAAAP3b4BwQqUud-SuEuZ9MQTGpOYex" />
     <add key="ContactFormSubjectMask" value="{0} - İletişim Formu" />
-    <add key="ContactFormReceiver" value="muhammet3yavuz5cayli10541002@gmail.com" /> <!--info@obezitedralipolat.com;-->
+    <add key="ContactFormReceiver" value="mertkose92@gmail.com" /> <!--info@obezitedralipolat.com;-->
     <add key="ContactFormReceiverBcc" value="info@reklamfabrikasi.com;" />
     <add key="ContactFormMailTemplate" value="/MailTemplates/ContactFormEmailText.cshtml" />
     <add key="HRApplicationFormSubjectMask" value="{0} - İK Formu" />
