/En kategori edit

--- a/UmbBase.Web/App_Data/umbraco.config
+++ b/UmbBase.Web/App_Data/umbraco.config
@@ -67,7 +67,7 @@
 <root id="-1">
   <site id="1062" key="8cd49f83-0075-4714-bb9d-8417ed6cf04a" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2016-08-15T16:44:53" updateDate="2017-06-10T19:10:28" nodeName="Site" urlName="site" path="-1,1062" isDoc="" nodeType="1059" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="0" nodeTypeAlias="site">
     <umbracoRedirect>2092</umbracoRedirect>
-    <clientHome id="2092" key="7c33f824-8a09-4f46-9cec-953dd2eeef19" parentID="1062" level="2" creatorID="0" sortOrder="0" createDate="2016-08-21T22:49:06" updateDate="2017-06-13T00:53:04" nodeName="tr" urlName="tr" path="-1,1062,2092" isDoc="" nodeType="2086" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="3100" nodeTypeAlias="clientHome">
+    <clientHome id="2092" key="7c33f824-8a09-4f46-9cec-953dd2eeef19" parentID="1062" level="2" creatorID="0" sortOrder="0" createDate="2016-08-21T22:49:06" updateDate="2017-06-13T23:07:20" nodeName="tr" urlName="tr" path="-1,1062,2092" isDoc="" nodeType="2086" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="3100" nodeTypeAlias="clientHome">
       <metaDescription><![CDATA[Vercon]]></metaDescription>
       <browserTitle><![CDATA[Ana Sayfa]]></browserTitle>
       <contactEmail><![CDATA[mertkose92@gmail.com]]></contactEmail>
@@ -85,6 +85,7 @@
       <homePageTitle><![CDATA[Vercon]]></homePageTitle>
       <sliderGallery>8274</sliderGallery>
       <aboutPage>2101</aboutPage>
+      <kategorigetir>8237</kategorigetir>
       <contactFax><![CDATA[0.232.342 43 00]]></contactFax>
       <hakkimidabuton><![CDATA[Hakkımızda]]></hakkimidabuton>
       <projeyonetimbaslik><![CDATA[Proje Yönetimi]]></projeyonetimbaslik>
@@ -327,7 +328,7 @@
         </referansLogo>
       </referanslar>
     </clientHome>
-    <clientHome id="8530" key="6968fe75-543b-43be-986d-8b41be40a7e0" parentID="1062" level="2" creatorID="0" sortOrder="1" createDate="2017-06-11T20:45:42" updateDate="2017-06-12T14:18:57" nodeName="en" urlName="en" path="-1,1062,8530" isDoc="" nodeType="2086" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="3100" nodeTypeAlias="clientHome">
+    <clientHome id="8530" key="6968fe75-543b-43be-986d-8b41be40a7e0" parentID="1062" level="2" creatorID="0" sortOrder="1" createDate="2017-06-11T20:45:42" updateDate="2017-06-13T23:09:32" nodeName="en" urlName="en" path="-1,1062,8530" isDoc="" nodeType="2086" creatorName="AdminUser" writerName="AdminUser" writerID="0" template="3100" nodeTypeAlias="clientHome">
       <metaDescription><![CDATA[Vercon]]></metaDescription>
       <browserTitle><![CDATA[Homepage]]></browserTitle>
       <contactEmail><![CDATA[buralarmail@vercon.com]]></contactEmail>
@@ -345,6 +346,7 @@
       <homePageTitle><![CDATA[Vercon]]></homePageTitle>
       <sliderGallery>8274</sliderGallery>
       <aboutPage>8544</aboutPage>
+      <kategorigetir>8238</kategorigetir>
       <contactFax><![CDATA[0.232.342 43 00]]></contactFax>
       <hakkimidabuton><![CDATA[About Us]]></hakkimidabuton>
       <projeyonetimbaslik><![CDATA[Project Management]]></projeyonetimbaslik>
